Cleanup and Header z-index bugfix

--- a/src/main/scss/base/settings/_zindex.scss
+++ b/src/main/scss/base/settings/_zindex.scss
@@ -1,8 +1,13 @@
 $header-zindex: 1;
-$hero-arrow-zindex: 1;
-$logo-zindex: 1;
-$waves-effect-zindex: 1;
-$gallery-overlay-close-zindex: 1;
 
+$hero-arrow-zindex: 1;
+
+$logo-zindex: 1;
+
+$waves-effect-zindex: 1;
+
+$gallery-overlay-close-zindex: 1;
 $gallery-zindex: 3;
-$header-zindex: 3;
+
+$header-default-zindex: 1;
+$header-mobile-portrait-zindex: 3;
