--- a/src/main/scss/component/header/_header.scss
+++ b/src/main/scss/component/header/_header.scss
@@ -3,8 +3,9 @@ header {
   height: $header-height;
   position: absolute;
   width: 100%;
+  z-index: $header-default-zindex;
 
   @include media($mobile) {
-    z-index: $header-zindex;
+    z-index: $header-mobile-portrait-zindex;
   }
 }
